--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ colorama==0.4.3
 coreapi==2.3.3
 coreschema==0.0.4
 decorator==4.4.2
+dj-database-url==0.5.0
 Django==3.0.4
+django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
 factory-boy==2.12.0
 Faker==4.0.2
+gunicorn==20.0.4
 idna==2.9
 inflection==0.3.1
 ipdb==0.13.2
@@ -26,6 +29,7 @@ packaging==20.3
 parso==0.6.2
 pickleshare==0.7.5
 prompt-toolkit==3.0.5
+psycopg2==2.8.4
 Pygments==2.6.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -41,3 +45,4 @@ traitlets==4.3.3
 uritemplate==3.0.1
 urllib3==1.25.8
 wcwidth==0.1.9
+whitenoise==5.0.1
