--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.7
+astroid==2.3.3
 backcall==0.1.0
 certifi==2019.11.28
 chardet==3.0.4
@@ -20,10 +21,13 @@ inflection==0.3.1
 ipdb==0.13.2
 ipython==7.13.0
 ipython-genutils==0.2.0
+isort==4.3.21
 itypes==1.1.0
 jedi==0.16.0
 Jinja2==2.11.1
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 openapi-codec==1.3.2
 packaging==20.3
 parso==0.6.2
@@ -33,6 +37,7 @@ psycopg2==2.8.4
 Pygments==2.6.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 pytz==2019.3
 requests==2.23.0
 ruamel.yaml==0.16.10
@@ -42,7 +47,9 @@ six==1.14.0
 sqlparse==0.3.1
 text-unidecode==1.3
 traitlets==4.3.3
+typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.8
 wcwidth==0.1.9
 whitenoise==5.0.1
+wrapt==1.11.2
